--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -193,4 +193,8 @@ body {
   .header-row-options {
     padding: 5px;
   }
+
+  .basic-button:hover {
+    background-color: #d9d0b5;
+  }
 }
